Fix cut off header text

--- a/src/components/globals.css
+++ b/src/components/globals.css
@@ -15,4 +15,5 @@ padding-top: 20px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  height: 30px;
 }
